--- a/FRONTEND/EventMaker-App/angular.json
+++ b/FRONTEND/EventMaker-App/angular.json
@@ -31,9 +31,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
-
+              "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
             ],
+
+
             "scripts": []
           },
           "configurations": {
@@ -100,10 +104,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
+              "src/styles.scss"
             ],
+
             "scripts": []
           }
         }
